add general purpose end points to retrieve list of all available sources and tools
